--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
       POSTGRES_USER: askflow
       POSTGRES_PASSWORD: askflow_password123
     volumes:
-      postgres_data
+      - postgres_data:/var/lib/postgresql/dat
     # No ports exposed to the internet – backend can still reach it by name "db"
