--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,13 @@ services:
     container_name: askflow-backend
     ports:
       - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      - DB_NAME=askflow
+      - DB_USER=askflow
+      - DB_PASSWORD=askflow_password123
+      - DB_HOST=db
 
   frontend:
     build:
@@ -13,9 +20,10 @@ services:
       dockerfile: Dockerfile.frontend
     container_name: askflow-frontend
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
+
   db:
     image: postgres:16
     restart: always
@@ -24,6 +32,9 @@ services:
       POSTGRES_USER: askflow
       POSTGRES_PASSWORD: askflow_password123
     volumes:
-      postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
-    # No ports exposed to the internet – backend can still reach it by name "db"
+volumes:
+  postgres_data:
